src/index.css
.row {
    display: table-row;
}
.column {
    float: left;
    width: 50%;
}

body {
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    opacity: 1;
    font-size: 16px;
    /*background-color: #212938; //Dark Mode
    color: #ffffff;*/
}

h1 {
    font-size: 60px;
    font-weight: 300;
    color: #40629f;
}

div.tooltip {
    position: absolute;
    text-align: center;
    width: 60px;
    height: 42px;
    padding: 2px;
    font: 12px sans-serif;
    background: lightsteelblue;
    border: 0px;
    border-radius: 8px;
}

#priority-list ul {
    position: absolute;
}

